2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/Makefile.am:
	Bug #4487: Add the bsd subdir to DIST_SUBDIRS. (Joshua Baergen)

2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* cfb/Makefile.am:
	* cfb/Makefile.am.inc:
	Bug #4257: Move cfbcmap.c to cfb_common_sources.

2005-09-20  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am (install-exec-local): 
	* configure.ac:
	Add --disable-install-setuid option so you can build as non-root
	and chown/chmod later.   Also disable by default on platforms that
	don't need setuid root X servers (Darwin & SPARC's, according to
	InstallXserverSetUID settings in the old Imake config files).

2005-09-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* hw/xfree86/os-support/bus/Makefile.am: 
	* hw/xfree86/os-support/linux/Makefile.am:
	Linux/Alpha support (Stefaan De Roeck)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Bug #3990: Require glproto in the cases that it's necessary (DRI or DMX
	with GLX).  (spyderous)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/Makefile.am:
	Bug #4046: Install the X.Org server setuid root. (David Schleef)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	Bug #3889: Create the log dir on install, and allow configuring
	specifically that directory.  Failure to have the directory keeps the
	xorg server from starting. (David Schleef)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/xf8_32bpp/Makefile.am:
	Don't put a version number on the module filename.

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/loader/Makefile.am:
	* hw/xfree86/xf8_32bpp/Makefile.am:
	Build xf8_32bpp, which is wanted by the mga driver, and export elf.h,
	which is wanted by the rendition driver.

2005-09-13  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/dri/Makefile.am: