@@ -11,4 +11,10 @@
 /* Path to XKB definitions. */
 #undef XKB_BASE_DIRECTORY
 
+/* Path to xkbcomp. */
+#undef XKB_BIN_DIRECTORY
+
+/* XKB output dir for compiled keymaps. */
+#undef XKM_OUTPUT_DIR
+
 #endif /* _XKB_CONFIG_H_ */
